<resources>
    <string name="app_name">EDcryptionApps</string>
    <string name="textHeader">EDcryptionApp</string>
    <string name="subtextHeader">Decryption and Encryption Text</string>
    <string name="encryption_text">Encryption Text</string>
    <string name="encode">Encode</string>
    <string name="copyText">Copy</string>
    <string name="resetText">Reset</string>
    <string name="decryption_text">Decryption Text</string>
    <string name="decode">Decode</string>
    <string name="input_encryption_text">input encryption text</string>
    <string name="encodeButton">Tombol Encode</string>
    <string name="copyEncode">copy text encode</string>
    <string name="resetTextEncode">reset text encode</string>
    <string name="tombolDecodeText">tombol decode text</string>
    <string name="copyTextDecode">copy text decode</string>
    <string name="resetTextDecode">reset text decode</string>
    <string name="inputDecodeText">input decode text</string>
    <string name="tidak_ada_data">tidak ada data</string>
    <string name="about_app">Aplikasi Mobile Encode dan Decode mengunakan Algoritma Base64 Dalam Aplikasi ini mempunyai 3 fitur yaitu \n- Fitur Pengacakan kata dua arah dari encode ke decode dan decode ke encode \n- Copy text Dalam textfield \n- Reset text Dalam textfield \n\n\n\nCopyright © 2022 Naufal Adjie.\nAll rights reserved.</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="label_histori">Histori</string>
    <string name="bagikan">Bagikan</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="data_bagikan_template">Data yang diEnkripsi\nText Encode : %1$s\nText Decode : %2$s\n Sutt ini Rahasia</string>
    <string name="hapus_histori">hapus histori</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="article">Article</string>
    <string name="koneksi_error">tidak ada koneksi</string>

    <!--    Updater -->
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update artikel otomatis</string>
    <string name="notif_title">Atikel Terbaru Muncul!</string>
    <string name="notif_text">Mari Mengenal Lebih Lanjut..</string>

    <!--    Getting Start App -->
    <string name="channel_name_getStart">Get Start</string>
    <string name="channel_desc_getStart">Aplikasi siap membuat pesan rahasia</string>
    <string name="notif_title_getStart">Pesan Rahasia Menunggu</string>
    <string name="notif_text_getStart">Buat pesan rahasia dan kirimkan pesan tersebut..</string>
</resources>