<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="50dp">

        <TextView

            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/textHeader"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/subtextHeader"
            android:text="@string/subtextHeader"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/encrytionTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/encryption_text"
        android:paddingTop="20dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/headerContent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/encodeInput"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:inputType="text|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/EncodeBotton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/encodeButton"
        android:text="@string/encode"
        app:layout_constraintStart_toStartOf="@id/encrytionTextField"
        app:layout_constraintTop_toBottomOf="@+id/encrytionTextField" />
    <Button
        android:id="@+id/encodeCopyBotton"
        android:text="@string/copyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/copyEncode"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:layout_constraintStart_toEndOf="@+id/EncodeBotton"
        app:layout_constraintTop_toBottomOf="@id/encrytionTextField"
        />

    <Button
        android:id="@+id/encodeResetBotton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetText"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/resetTextEncode"
        app:layout_constraintStart_toEndOf="@id/encodeCopyBotton"
        app:layout_constraintTop_toBottomOf="@id/encrytionTextField"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/decryptionTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/decryption_text"
        android:paddingTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/EncodeBotton"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/decodeInput"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/decodeBotton"
        android:text="@string/decode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tombolDecodeText"

        style="@style/Widget.MaterialComponents.Button.Icon"
        app:layout_constraintStart_toStartOf="@id/decryptionTextField"
        app:layout_constraintTop_toBottomOf="@+id/decryptionTextField"
        />
    <Button
        android:id="@+id/decodeCopyBotton"
        android:text="@string/copyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/copyTextDecode"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:layout_constraintStart_toEndOf="@+id/decodeBotton"
        app:layout_constraintTop_toBottomOf="@id/decryptionTextField"

        />

    <Button
        android:id="@+id/decodeResetBotton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetText"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/resetTextDecode"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/decodeCopyBotton"
        app:layout_constraintTop_toBottomOf="@id/decryptionTextField"

        />


    <Button
        android:id="@+id/historiButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/label_histori"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decodeBotton"
       app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/bagikanButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bagikan"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/historiButton"
        app:layout_constraintTop_toBottomOf="@+id/historiButton"
        app:layout_constraintEnd_toEndOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>