<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="org.d3if0012.edcryptionapp.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/nav_home_to_histori"
        app:destination="@id/historiFragment"
            />
        <action
            android:id="@+id/nav_home_to_about"
            app:destination="@+id/aboutFragment"
            />
    </fragment>


    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if0012.edcryptionapp.ui.histori.HistoriFragment"
        tools:layout="@layout/fragment_histori"
        android:label="@string/label_histori"
        />

    <fragment
        android:id="@+id/aboutFragment"
        android:label="@string/tentang_aplikasi"
        android:name="org.d3if0012.edcryptionapp.ui.about.AboutFragment"
        tools:layout="@layout/fragment_about"
        />
</navigation>